--- a/c1/001.md
+++ b/c1/001.md
@@ -4,9 +4,9 @@
 
 我们先来看一道题目：
 
-| 第350题：给定两个数组，编写一个函数来计算它们的交集。 |
+| 第350题：两个数组的交集 II   |
 | ----------------------------------------------------- |
-|            |
+| 给定两个数组，编写一个函数来计算它们的交集。           |
 
 **示例 1:**
 
