--- a/c1/001.md
+++ b/c1/001.md
@@ -35,6 +35,8 @@
 
 思路：设定两个为0的指针，比较两个指针的元素是否相等。如果指针的元素相等，我们将两个指针一起向后移动，并且将相等的元素放入空白数组。
 
+### 02、题解分析
+
 > 首先拿到这道题，我们基本马上可以想到，此题可以看成是一道传统的**映射题（map映射）**，为什么可以这样看呢，因为**我们需找出两个数组的交集元素，同时应与两个数组中出现的次数一致。这样就导致了我们需要知道每个值出现的次数，所以映射关系就成了<元素,出现次数>**。剩下的就是顺利成章的解题。
 
 由于该种解法过于简单，我们不做进一步分析，直接给出题解：
@@ -62,7 +64,7 @@ func intersect(nums1 []int, nums2 []int) []int {
 
 这个方法比较简单，相信大家都能看的懂！
 
-### 02、题目进阶
+### 03、题目进阶
 
 > 题目在进阶问题中问道：如果给定的数组已经排好序呢？你将如何优化你的算法？我们分析一下，假如两个数组都是有序的，分别为：arr1 = [1,2,3,4,4,13]，arr2 = [1,2,3,9,10]
 
@@ -88,7 +90,7 @@ func intersect(nums1 []int, nums2 []int) []int {
 
 ![PNG](001/5.png)
 
-### 03、题目解答
+### 04、题目解答
 
 根据分析，我们很容易得到下面的题解：
 
@@ -117,4 +119,5 @@ func intersect(nums1 []int, nums2 []int) []int {
 
 ------
 
-注：本系列所有教程中都不会用到复杂的语言特性，大家不需要担心没有学过go。算法思想最重要，使用go纯属本人爱好。同时，本系列所有代码均在leetcode上进行过测试运行，保证其严谨性！
+- 本文语言虽随机选取，但不会使用复杂的语法特性。
+- 本文出现全部代码均在 leetcode 上完整运行。
