--- a/c1/002.md
+++ b/c1/002.md
@@ -30,8 +30,9 @@
 
 - 所有输入只包含小写字母 a-z 
 
->我们要想寻找最长公共前缀，那么**首先这个前缀是公共的，我们可以从任意一个元素中找到它**。假定我们现在就从一个数组中寻找最长公共前缀，那么首先，我们可以将第一个元素设置为基准元素x0。假如数组为["flow","flower","flight"]，flow就是我们的基准元素x0。
+### 02、题解分析
 
+>我们要想寻找最长公共前缀，那么**首先这个前缀是公共的，我们可以从任意一个元素中找到它**。假定我们现在就从一个数组中寻找最长公共前缀，那么首先，我们可以将第一个元素设置为基准元素x0。假如数组为["flow","flower","flight"]，flow就是我们的基准元素x0。
 
 
 然后我们只需要**依次将基准元素和后面的元素进行比较**（假定后面的元素依次为x1,x2,x3....），**不断更新基准元素，直到基准元素和所有元素都满足最长公共前缀的条件**，就可以得到最长公共前缀。
@@ -53,7 +54,7 @@
 
 然后我们就可以开始写我们的代码了。
 
-### 02、题目解答
+### 03、代码分析
 
 根据分析，我们很容易得到下面的题解：
 
@@ -83,3 +84,5 @@ func longestCommonPrefix(strs []string) string {
 
 ------
 
+- 本文语言虽随机选取，但不会使用复杂的语法特性。
+- 本文出现全部代码均在 leetcode 上完整运行。
