--- a/c1/003.md
+++ b/c1/003.md
@@ -57,7 +57,7 @@
 
 现在题目搞清楚了，我们来思考一下。
 
-### 02、题目图读
+### 02、题解分析
 
 假设给定的数组为：[7, 1, 5, 3, 6, 4]   我们将其绘制成折线图，大概是下面这样：
 
@@ -67,7 +67,7 @@
 
 其实也就是尽可能多的低价买入，高价卖出啦。
 
-### 03、题目解答
+### 03、代码分析
 
 根据以上分析，我们很容易得到下面的题解：
 
@@ -99,4 +99,7 @@ func max(a,b int) int {
 图解的方式其实在各种算法题中，屡见不鲜。而我们通过图解的方式，也可以抽丝剥茧一样，一层一层剥掉算法题目的外壳，寻找到最直观的解题思路，直捣黄....咳咳，直奔核心。那我们又如何用图解的观察方式，来对本系列的其他题目寻找到一种通用解法，来规避题目中的陷阱呢？浩仔讲算法，我们下期再见喽！
 
 ------
+
+- 本文语言虽随机选取，但不会使用复杂的语法特性。
+- 本文出现全部代码均在 leetcode 上完整运行。
 
