新增文末内容

--- a/c3/301.md
+++ b/c3/301.md
@@ -42,6 +42,7 @@
 根据以上分析，我们可以得到下面的题解：
 
 ```go
+//Go
 func reverseString(s []byte) {
 	left := 0
 	right := len(s) - 1
@@ -55,3 +56,5 @@ func reverseString(s []byte) {
 
 ------
 
+- 本文语言虽随机选取，但不会使用复杂的语法特性。
+- 本文出现全部代码均在 leetcode 上测试通过。
