--- a/c0/001.md
+++ b/c0/001.md
@@ -121,4 +121,4 @@ func intersect(nums1 []int, nums2 []int) []int {
 ------
 
 - 本文语言虽随机选取，但不会使用复杂的语法特性。
-- 本文出现全部代码均在 leetcode 上完整运行。
+- 本文出现全部代码均在 leetcode 上测试通过。
