--- a/c0/002.md
+++ b/c0/002.md
@@ -86,4 +86,4 @@ func longestCommonPrefix(strs []string) string {
 ------
 
 - 本文语言虽随机选取，但不会使用复杂的语法特性。
-- 本文出现全部代码均在 leetcode 上完整运行。
+- 本文出现全部代码均在 leetcode 上测试通过。
