--- a/c2/203.md
+++ b/c2/203.md
@@ -22,14 +22,15 @@
 
   <bra>
 
-> **这道题有一定难度哦！如果没有思路请回顾上一篇的学习内容！不建议直接看题解！**
+> **这道题有一定难度哦！如果没有思路请回顾上一篇的学习内容！**
+>
+> **不建议直接看题解！**
 
 ### 02、题目图解
 
 首先我们分析题目，要找的是**最长上升子序列**（Longest Increasing Subsequence，LIS）。因为题目中没有要求连续，所以**LIS可能是连续的，也可能是非连续的。**同时，**LIS符合可以从其子问题的最优解来进行构建**的条件。所以我们可以尝试用动态规划来进行求解。首先我们定义状态：
 
 <center>**dp[i] ：表示以nums[i]结尾的最长上升子序列的长度**</center>
-
 我们假定nums为[1，9，5，9，3]，如下图：
 
 <img src="203/1.png" alt="PNG" style="zoom:67%;" />
@@ -48,17 +49,11 @@
 即：
 
 <center>**dp[i] = max(dp[j]+1，dp[k]+1，dp[p]+1，.....)**</center>
-
 <center>只要满足：</center>
-
 <center>nums[i] > nums[j]</center>
-
 <center>nums[i] > nums[k]</center>
-
 <center>nums[i] > nums[p]</center>
-
 <center>....</center>
-
 最后，我们只需要找到dp数组中的最大值，就是我们要找的答案。
 
 分析完毕，我们绘制成图：
