--- a/c0/007.md
+++ b/c0/007.md
@@ -16,11 +16,13 @@
 所以返回 [0, 1]
 ```
 
-<bra>
+<br>
 
 > 题目分析
 
-首先我们拿到题目一看，马上可以想到**暴力题解**。我们只需要”**遍历每个元素 x，并查找是否存在一个值与 target - x 相等的目标元素。**“  该种解题思路过于简单，直接上代码（如果有问题请留言..）：
+首先我们拿到题目一看，马上可以想到**暴力题解**。我们只需要 “**遍历每个元素 x，并查找是否存在一个值与 target - x 相等的目标元素。**”  
+<br>
+由于该种解题思路过于简单，直接上代码（如果有问题请留言..）：
 
 ```
 func twoSum(nums []int, target int) []int {
@@ -45,17 +47,17 @@ func twoSum(nums []int, target int) []int {
 
 假设 nums = [2, 7, 11, 15], target = 9
 
-<bra>
+<br>
 
-<1> 首先，我们还是先遍历数组 nums，i 为当前下标。我们需要将每一个遍历的值放入map中作为key。
+<1> 首先，我们还是先遍历数组 nums，i 为当前下标。我们需要将每一个遍历的值放入 map 中作为 key。
 
 <img src="007/2.jpeg" alt="PNG" style="zoom:67%;" />
 
-<2>同时，对每个值都判断map中是否存在 **target-nums[i]** 的key值。在这里就是9-7=2。我们可以看到2在map中已经存在。
+<2> 同时，对每个值都判断 map 中是否存在 **target-nums[i]** 的 key 值。在这里就是 9-7=2。我们可以看到 2 在 map 中已经存在。
 
 <img src="007/3.jpg" alt="PNG" style="zoom:67%;" />
 
-<3> 所以，2和7所在的key对应的value，也就是[0,1]。就是我们要找的两个数组下标。
+<3> 所以，2 和 7 所在的 key 对应的 value，也就是 [0,1]。就是我们要找的两个数组下标。
 
 <img src="007/4.jpg" alt="PNG" style="zoom:67%;" />
 
