--- a/c1/102.md
+++ b/c1/102.md
@@ -13,11 +13,11 @@
 输出：1->1->2->3->4->4
 ```
 
-<bra>
+<br>
 
 首先我们拿到题目乍眼一看，类似这种**链表的合并问题**。基本上马上可以想到**需要设置一个哨兵节点，这可以在最后让我们比较容易地返回合并后的链表。**（不懂哨兵节点的同学，可以先移驾到  [06.删除链表倒数第N个节点(19)](c1/006.md)  进行学习）
 
-<bra>
+<br>
 
 假设我们的链表分别为:
 
@@ -25,7 +25,7 @@ l1 = [1,2,4]
 
 l2 = [1,3,4]
 
-同时我们设定一个"prehead"的哨兵节点,大概是下面这样：
+同时我们设定一个 "prehead" 的哨兵节点,大概是下面这样：
 
 <img src="102/1.png" alt="PNG" style="zoom: 50%;" />
 
@@ -33,11 +33,11 @@ l2 = [1,3,4]
 
 如上图所示，首先我们**维护一个 prehead 的哨兵节点**。我们其实**只需要调整它的 next 指针**。让它总是**指向l1或者l2中较小的一个，直到l1或者l2任一指向null**。这样到了最后，如果l1还是l2中任意一方还有余下元素没有用到，那**余下的这些元素一定大于prehead已经合并完的链表（因为是有序链表）**。我们只需要将这些元素全部追加到prehead合并完的链表后，最终就得到了我们需要的链表。大概流程如下：
 
-1. 首先我们将prehead指向l1或者l2中比较小的一个。如果相等，则任意一个都可以。此时的l1位[2,4]，l2位[1,3,4]
+1. 首先我们将 prehead 指向 l1 或者 l2 中比较小的一个。如果相等，则任意一个都可以。此时的 l1 为 [2,4]，l2 为 [1,3,4]
 
    <img src="102/2.png" alt="PNG" style="zoom: 50%;" />
 
-2. 我们继续上面的步骤。将prehead的链表指向l1和l2中较小的一个。现在这里就是指向1。
+2. 我们继续上面的步骤。将 prehead 的链表指向 l1 和 l2 中较小的一个。现在这里就是指向1。
 
    <img src="102/3.jpg" alt="PNG" style="zoom:50%;" />
 
@@ -45,9 +45,9 @@ l2 = [1,3,4]
 
    <img src="102/4.jpg" alt="PNG" style="zoom:50%;" />
 
-4. 现在prehead.Next就是我们需要的链表。
+4. 现在 prehead.Next 就是我们需要的链表。
 
-   <bra>
+   <br>
 
 ### 03、Go语言示例
 
