--- a/learning/0.0.学习须知/01.md
+++ b/learning/0.0.学习须知/01.md
@@ -8,14 +8,14 @@ title:  小浩算法（持续更新中）
 - 面向 <font color="red"><b>算法小白</b></font> 和 <font color="red"><b>初中阶读者</b></font>。
 - 所有代码均在 leetcode 上测试运行，可以直接右上角搜索题号。
 
-<img src="./01/02.jpeg" alt="JPEG" style="zoom: 67%;" width=300/> 
+<img src="/suggest.jpeg" alt="JPEG" style="zoom: 67%;" width=300/> 
 :::
 
 ::: danger 重要
 - 目前该教程<b>全部免费</b>，正因如此被一些不良商家拿去卖钱！ 所以我把全部的内容都同步到了 [github](https://github.com/geekxh/hello-algorithm)，希望大家可以帮我点一个 star，防止有更多的人上当受骗！小浩感激不尽！
 - 为了大家更好的交流，我创建了万人刷题群。我承诺群里无广告，不套路，仅作算法交流学习使用！下方扫码回复 <font color="red"><b>【进群】</b></font> 即可
 
-<img src="./01/01.jpeg" alt="JPEG" style="zoom: 67%;" width=300/>
+<img src="/code.jpeg" alt="JPEG" style="zoom: 67%;" width=300/>
 ::: 
 
 ::: tip 目录
