修改三级目录为二级目录

--- a/learning/1.0.数组系列/002.md
+++ b/learning/1.0.数组系列/002.md
@@ -2,7 +2,7 @@
 title:  最长公共前缀(14)
 ---
 
-### 01、题目分析
+## 01、题目分析
 
 首先还是看下题目：
 
@@ -32,7 +32,7 @@ title:  最长公共前缀(14)
 
 - 所有输入只包含小写字母 a-z 
 
-### 02、题解分析
+## 02、题解分析
 
 >我们要想寻找最长公共前缀，那么**首先这个前缀是公共的，我们可以从任意一个元素中找到它**。假定我们现在就从一个数组中寻找最长公共前缀，那么首先，我们可以将第一个元素设置为基准元素x0。假如数组为["flow","flower","flight"]，flow就是我们的基准元素x0。
 
@@ -56,7 +56,7 @@ title:  最长公共前缀(14)
 
 然后我们就可以开始写我们的代码了。
 
-### 03、代码分析
+## 03、代码分析
 
 根据分析，我们很容易得到下面的题解：
 
