--- a/learning/1.0.数组系列/004.md
+++ b/learning/1.0.数组系列/004.md
@@ -2,7 +2,7 @@
 title:  旋转数组(189)
 ---
 
-### 01、题目分析
+## 01、题目分析
 
 | 题目189: 旋转数组                                            |
 | ------------------------------------------------------------ |
@@ -43,7 +43,7 @@ title:  旋转数组(189)
 
 > 这道题如果不要求原地翻转的话，其实相当简单。但是原地翻转的方法却并不容易想到，我们直接看题解。
 
-### 02、题目图解
+## 02、题目图解
 
 > 这个方法基于这个事实：**若我们需要将数组中的元素向右移动 k 个位置， 那么 k%l (l为数组长度) 的尾部元素会被移动到头部，剩下的元素会被向后移动。**
 
@@ -59,7 +59,7 @@ title:  旋转数组(189)
 
 <img src="./004/2.png" alt="PNG" style="zoom: 80%;" />
 
-### 03、题目解答
+## 03、题目解答
 
 根据分析，我们可以得到下面的题解：
 
