--- a/learning/1.0.数组系列/005.md
+++ b/learning/1.0.数组系列/005.md
@@ -2,7 +2,7 @@
 title:  原地删除(27)
 ---
 
-### 01、题目分析
+## 01、题目分析
 
 | 题目27：移除元素                                             |
 | ------------------------------------------------------------ |
@@ -48,7 +48,7 @@ func removeElement(nums []int, val int) int {
 
 和这道题类似的还有LeetCode 26题，大家可以尝试自己先做一做，然后再看答案哦。
 
-### 02、类似题目分析
+## 02、类似题目分析
 
 | 题目26：删除排序数组中的重复项                               |
 | ------------------------------------------------------------ |
