--- a/learning/1.0.数组系列/006.md
+++ b/learning/1.0.数组系列/006.md
@@ -3,7 +3,7 @@ title:  加一(66)
 ---
 
 > 看到这个标题，大家肯定会觉得，不就是“加1”嘛，这么简单的问题我可以！但是就是这么简单的“加1”可是面试的高频题哦，所以我们就一起来看看吧。按照往例，我们还是从一道LeetCode题开始吧。
-### 01、题目分析
+## 01、题目分析
 
 | 第66题：加一                                                 |
 | ------------------------------------------------------------ |
@@ -39,7 +39,7 @@ title:  加一(66)
 
 所以我们只需要模拟这两种运算，就可以顺利进行求解！
 
-### 02、题目图解
+## 02、题目图解
 
 假设我们的数为[1,9,9]
 
@@ -53,7 +53,7 @@ title:  加一(66)
 
 通过以上分析，我们最后只需要将其转换成代码即可！这样看来，“加1”是不是也不像想象中的那么简单？
 
-### 03、GO语言示例
+## 03、GO语言示例
 
 根据以上分析，我们可以得到下面的题解：
 
