--- a/learning/1.0.数组系列/007.md
+++ b/learning/1.0.数组系列/007.md
@@ -2,7 +2,7 @@
 title:  两数之和(1)
 ---
 
-### 01、题目分析
+## 01、题目分析
 
 | 第1题：两数之和                                              |
 | ------------------------------------------------------------ |
@@ -45,7 +45,7 @@ func twoSum(nums []int, target int) []int {
 
 > 运行成功，但是该种解题方式的时间复杂度过高，达到了O(n²)。为了对运行时间复杂度进行优化，我们需要一种更有效的方法来检查数组中是否存在目标元素。我们可以想到用**哈希表**的方式，通过以空间换取时间的方式来进行。
 
-### 02、题目图解
+## 02、题目图解
 
 假设 nums = [2, 7, 11, 15], target = 9
 
@@ -63,7 +63,7 @@ func twoSum(nums []int, target int) []int {
 
 <img src="./007/4.jpg" alt="PNG" style="zoom:67%;" />
 
-### 03、Go语言示例
+## 03、Go语言示例
 
 根据以上分析，我们可以得到下面的题解：
 
