--- a/learning/1.1.链表系列/101.md
+++ b/learning/1.1.链表系列/101.md
@@ -2,7 +2,7 @@
 title:  删除链表倒数第N个节点(19)
 ---
 
-### 01、哨兵节点
+## 01、哨兵节点
 
 在链表的题目中，十道有九道会用到**哨兵节点**，所以我们先讲一下什么是哨兵节点。
 
@@ -20,7 +20,7 @@ title:  删除链表倒数第N个节点(19)
 
 下面我们看一道题目，看一下哨兵节点的应用
 
-### 02、题目讲解
+## 02、题目讲解
 
 | 第19题：删除链表倒数第N个节点                                |
 | ------------------------------------------------------------ |
@@ -51,7 +51,7 @@ title:  删除链表倒数第N个节点(19)
 
 接下来，我们只要同时定位到要删除的元素的前1个元素，通过前面讲过的删除操作，就可以很顺利的完成这道题目啦。
 
-### 03、解题过程
+## 03、解题过程
 
 现在我们来完整捋一遍解题过程：
 
@@ -65,7 +65,7 @@ title:  删除链表倒数第N个节点(19)
 
 <img src="./101/3.jpeg" alt="PNG" style="zoom: 67%;" />
 
-### 04、题目解答
+## 04、题目解答
 
 根据以上分析，我们可以得到下面的题解：
 
