--- a/learning/1.1.链表系列/102.md
+++ b/learning/1.1.链表系列/102.md
@@ -2,7 +2,7 @@
 title:  合并两个有序链表(21)
 ---
 
-### 01、题目分析
+## 01、题目分析
 
 | 第21题：合并两个有序链表                                     |
 | ------------------------------------------------------------ |
@@ -31,7 +31,7 @@ l2 = [1,3,4]
 
 <img src="./102/1.png" alt="PNG" style="zoom: 50%;" />
 
-### 02、题目图解
+## 02、题目图解
 
 如上图所示，首先我们**维护一个 prehead 的哨兵节点**。我们其实**只需要调整它的 next 指针**。让它总是**指向l1或者l2中较小的一个，直到l1或者l2任一指向null**。这样到了最后，如果l1还是l2中任意一方还有余下元素没有用到，那**余下的这些元素一定大于prehead已经合并完的链表（因为是有序链表）**。我们只需要将这些元素全部追加到prehead合并完的链表后，最终就得到了我们需要的链表。大概流程如下：
 
@@ -51,7 +51,7 @@ l2 = [1,3,4]
 
    <br/>
 
-### 03、Go语言示例
+## 03、Go语言示例
 
 根据以上分析，我们可以得到下面的题解：
 
