--- a/learning/1.2.动态规划系列/201.md
+++ b/learning/1.2.动态规划系列/201.md
@@ -2,7 +2,7 @@
 title:  DP 第一讲 - 爬楼梯(70)
 ---
 
-### 01、概念讲解
+## 01、概念讲解
 
 > 关于动态规划的资料很多，官方的定义是**指把多阶段过程转化为一系列单阶段问题，利用各阶段之间的关系，逐个求解**。概念中的**各阶段之间的关系**，其实指的就是**状态转移方程**。很多人觉得DP难（下文统称动态规划为DP），根本原因是因为**DP跟一些固定形式的算法不同**（比如DFS、二分法、KMP），它没有实际的步骤规定第一步、第二步来做什么，所以准确来说，**DP其实是一种解决问题的思想**。
 
@@ -30,7 +30,7 @@ dp[i][j] = opt(dp[i-1][j] + xi, dp[i][j-1] + yj, ...)
 
 <br/>每一个状态转移方程，多少都有一些细微的差别。这个其实很容易理解，世间的关系多了去了，不可能抽象出完全可以套用的公式。所以我个人其实**不建议去死记硬背各种类型的状态转移方程**。但是DP的题型真的就完全无法掌握，无法归类进行分析吗？我认为不是的。在本系列中，我将由简入深为大家讲解动态规划这个主题。
 
- ### 02、题目分析
+ ## 02、题目分析
 
 我们先看一道最简单的DP题目，熟悉DP的概念：
 
@@ -55,7 +55,7 @@ dp[i][j] = opt(dp[i-1][j] + xi, dp[i][j-1] + yj, ...)
 3.  2 阶 + 1 阶
 ```
 
-### 03 、图解分析
+## 03 、图解分析
 
 通过分析我们可以明确，该题可以被分解为一些包含最优子结构的子问题，即它的**最优解可以从其子问题的最优解来有效地构建**。满足“**将大问题分解为若干个规模较小的问题**”的条件。所我们令 **dp[n] 表示能到达第 n 阶**的方法总数，可以得到如下状态转移方程：
 
@@ -71,7 +71,7 @@ dp[i][j] = opt(dp[i-1][j] + xi, dp[i][j-1] + yj, ...)
 
 <br/><img src="./201/2.png" alt="img" style="zoom: 67%;" />
 
-### 04、GO语言示例
+## 04、GO语言示例
 
 根据以上分析，可以得到代码如下：
 
