--- a/learning/1.2.动态规划系列/202.md
+++ b/learning/1.2.动态规划系列/202.md
@@ -3,7 +3,7 @@ title:  DP 第二讲 - 最大子序和(53)
 ---
 
 > 在上一篇文章[011.动态规划系列 —第一讲(70)](c1/011.md)中，我们讲解了DP的概念并且通过示例了解了什么是动态规划。本篇中，我们将继续通过1道简单题型，进一步学习动态规划的思想。
-### 01、题目分析
+## 01、题目分析
 
 | 第53题：最大子序和                                           |
 | ------------------------------------------------------------ |
@@ -18,7 +18,7 @@ title:  DP 第二讲 - 最大子序和(53)
 ```
 拿到题目请不要直接看下方题解，先自行思考2-3分钟....
 
-### 02、题目图解
+## 02、题目图解
 
 首先我们分析题目，**一个连续子数组一定要以一个数作为结尾**，那么我们可以将状态定义成如下：
 
@@ -65,7 +65,7 @@ title:  DP 第二讲 - 最大子序和(53)
 
 <img src="./202/1.jpg" alt="PNG" style="zoom:67%;" />
 
-### 03、Go语言示例
+## 03、Go语言示例
 
  根据以上分析，可以得到代码如下：
 
