--- a/learning/1.2.动态规划系列/203.md
+++ b/learning/1.2.动态规划系列/203.md
@@ -3,7 +3,7 @@ title:  DP 第三讲 - 最长上升子序列(300)
 ---
 
 > 在上一篇中，我们了解了什么是DP（动态规划），并且通过DP中的经典问题 "最大子序和"，学习了**状态转移方程**应该如何定义。在本节中，我们将沿用之前的分析方法，通过一道例题，进一步巩固之前的内容！
-### 01、题目分析
+## 01、题目分析
 
 | 第300题：最长上升子序列                                |
 | ------------------------------------------------------ |
@@ -24,7 +24,7 @@ title:  DP 第三讲 - 最长上升子序列(300)
 > <b> 这道题有一定难度哦！如果没有思路请回顾上一篇的学习内容！</b>
 > <b> 不建议直接看题解！</b>
 
-### 02、题目图解
+## 02、题目图解
 
 首先我们分析题目，要找的是**最长上升子序列**（Longest Increasing Subsequence，LIS）。因为题目中没有要求连续，所以**LIS可能是连续的，也可能是非连续的。**同时，**LIS符合可以从其子问题的最优解来进行构建**的条件。所以我们可以尝试用动态规划来进行求解。首先我们定义状态：
 
@@ -60,7 +60,7 @@ title:  DP 第三讲 - 最长上升子序列(300)
 
 <img src="./203/2.jpeg" alt="PNG" style="zoom:67%;" />
 
-### 03、Go语言示例
+## 03、Go语言示例
 
 根据以上分析，可以得到代码如下：
 
