--- a/learning/1.2.动态规划系列/205.md
+++ b/learning/1.2.动态规划系列/205.md
@@ -3,7 +3,7 @@ title:  DP 第五讲 - 最小路径和(64)
 ---
 
 > 在上一篇中，我们通过分析，顺利完成了“**三角形最小路径和**”的动态规划题解。在本节中，我们继续看一道相似题型，以求能完全掌握这种“路径和”的问题。话不多说，先看题目：
-### 01、题目分析
+## 01、题目分析
 
 | 第64题：最小路径和                                           |
 | ------------------------------------------------------------ |
@@ -30,7 +30,7 @@ title:  DP 第五讲 - 最小路径和(64)
 >
 > **不建议直接看题解！**
 
-### 02、题目图解
+## 02、题目图解
 
 首先我们分析题目，要找的是 **最小路径和，**这是个啥意思呢？假设我们有一个 m * n 的矩形 ：[[1,3,1],[1,5,1],[4,2,1]]
 
@@ -86,7 +86,7 @@ title:  DP 第五讲 - 最小路径和(64)
 3. 分析状态转移方程不能满足的特殊情况。
 4. 得到最终解
 
-### 03、GO语言示例
+## 03、GO语言示例
 
  根据以上分析，可以得到代码如下：
 
