--- a/learning/1.3.字符串系列/301.md
+++ b/learning/1.3.字符串系列/301.md
@@ -2,7 +2,7 @@
 title:  反转字符串(301)
 ---
 
-### 01、题目分析
+## 01、题目分析
 
 | 第344题：反转字符串                                          |
 | ------------------------------------------------------------ |
@@ -24,7 +24,7 @@ title:  反转字符串(301)
 输出：["h","a","n","n","a","H"]
 ```
 
-### 02、题目图解
+## 02、题目图解
 
 这是一道相当简单的经典题目，直接上题解：使用双指针进行反转字符串。
 
@@ -40,7 +40,7 @@ title:  反转字符串(301)
 
 <img src="./301/1.jpg" alt="PNG" style="zoom:67%"/>
 
-### 03、Go语言示例
+## 03、Go语言示例
 
 根据以上分析，我们可以得到下面的题解：
 
