--- a/learning/1.4.二叉树系列/401.md
+++ b/learning/1.4.二叉树系列/401.md
@@ -5,7 +5,7 @@ title:  二叉树第一讲 - 最大深度与DFS(104)
 > 在计算机科学中，二叉树是**每个结点最多有两个子树**的树结构。通常子树被称作“左子树”（left subtree）和“右子树”（right subtree）。二叉树常被用于**实现二叉查找树**和**二叉堆**。树比链表稍微复杂，因为链表是线性数据结构，而树不是。树的问题很多都可以由**广度优先搜索**或**深度优先搜索解决**。
 >
 > 在本系列中，我们将通过一些例题，学习关于二叉树的经典操作！
-### 01、题目分析
+## 01、题目分析
 
 | 第104题：二叉树的最大深度                                    |
 | ------------------------------------------------------------ |
@@ -28,7 +28,7 @@ title:  二叉树第一讲 - 最大深度与DFS(104)
 
 <center><b> 本系列内容均为必须掌握！ </b></center>
 
-### 02、递归求解
+## 02、递归求解
 
 我们知道，**每个节点的深度与它左右子树的深度有关，且等于其左右子树最大深度值加上  1 **。即：
 
@@ -85,7 +85,7 @@ func max(a int, b int) int {
 
 <br/>
 
-### 03、DFS
+## 03、DFS
 
 其实我们上面用的递归方式，本质上是使用了DFS的思想。先介绍一下DFS：深度优先搜索算法（Depth First Search），对于二叉树而言，它沿着**树的深度遍历树的节点，尽可能深的搜索树的分支**，**这一过程一直进行到已发现从源节点可达的所有节点为止**。
 
