--- a/learning/1.4.二叉树系列/403.md
+++ b/learning/1.4.二叉树系列/403.md
@@ -3,7 +3,7 @@ title:  二叉树第三讲 - BST与其验证(98)
 ---
 
 > 在上一节中，我们分别学习了DFS与BFS。在本节中，我们将继续学习一种特殊的二叉树结构 —— **二叉搜索树（BST）**。
-### 01、二叉搜索树
+## 01、二叉搜索树
 
 先看定义：二叉搜索树（Binary Search Tree），（又：二叉查找树，二叉排序树）它或者是**一棵空树**，或者是具有下列性质的二叉树：若**它的左子树不空，则左子树上所有结点的值均小于它的根结点的值**；若**它的右子树不空，则右子树上所有结点的值均大于它的根结点的值**；它的左、右子树也分别为**二叉搜索树**。
 
@@ -29,7 +29,7 @@ title:  二叉树第三讲 - BST与其验证(98)
 
 那我们如何来验证一颗二叉搜索树？我们看题。
 
-### 02、题目分析
+## 02、题目分析
 
 | 第98题：验证二叉搜索树                             |
 | -------------------------------------------------- |
@@ -65,7 +65,7 @@ title:  二叉树第三讲 - BST与其验证(98)
 
 首先看完题目，我们很容易想到 遍历整棵树，比较所有节点，通过 左节点值<节点值，右节点值＞节点值 的方式来进行求解。但是这种解法是错误的，因为**对于任意一个节点**，我们不光需要左节点值小于该节点，并且**左子树上的所有节点值都需要小于该节点**。（右节点一致）所以我们在此引入上界与下界，用以保存之前的节点中出现的**最大值与最小值**。
 
-### 03、递归求解
+## 03、递归求解
 
 明确了题目，我们直接使用递归进行求解。这里需要强调的是，在每次递归中，我们除了**进行左右节点的校验，还需要与上下界进行判断**。由于该递归分析有一定难度，所以我们先展示代码：
 
