--- a/learning/1.4.二叉树系列/404.md
+++ b/learning/1.4.二叉树系列/404.md
@@ -5,7 +5,7 @@ title:  二叉树第四讲 - BST 的查找(700)
 > 在上一节中，我们学习了**二叉搜索树**。那我们如何**在二叉搜索树中查找一个元素**呢？和普通的二叉树又有何不同？我们将在本节内容中进行学习！
 >
 > 下面我们仍然通过例题进行讲解。
-### 01、题目分析
+## 01、题目分析
 
 | 第700题：二叉搜索树中的搜索                                  |
 | ------------------------------------------------------------ |
@@ -41,7 +41,7 @@ title:  二叉树第四讲 - BST 的查找(700)
 >
 > <b> 为后续题目打基础！</b>
 
-### 02、复习巩固
+## 02、复习巩固
 
 先复习一下，**二叉搜索树**（BST）的特性：
 
@@ -57,7 +57,7 @@ title:  二叉树第四讲 - BST 的查找(700)
 
 <img src="./404/1.jpg" alt="img" style="zoom: 67%;" />
 
-### 03、图解分析
+## 03、图解分析
 
 假设目标值为 val，根据BST的特性，我们可以很容易想到查找过程
 
@@ -71,7 +71,7 @@ title:  二叉树第四讲 - BST 的查找(700)
 
 ><center><b> 很简单，不是吗？</b></center>
 
-### 04、代码示例
+## 04、代码示例
 
 给出递归和迭代两种解法：
 
