--- a/learning/1.4.二叉树系列/405.md
+++ b/learning/1.4.二叉树系列/405.md
@@ -5,7 +5,7 @@ title:  二叉树第五讲 - BST 的删除(450)
 > 在两节中，我们了解了BST（二叉搜索树）的概念，并且知道了如何在BST中查找一个元素。那我们又如何在BST中去删除一个元素呢？我们将通过本节的例题进行学习！
 >
 > 下面我们仍然通过例题进行讲解。
-### 01、题目分析
+## 01、题目分析
 
 | 第450题：删除二叉搜索树中的节点                              |
 | ------------------------------------------------------------ |
@@ -57,7 +57,7 @@ key = 3
 >
 > **以达到最好的学习效果！**
 
-### 02、复习巩固
+## 02、复习巩固
 
 先复习一下，**二叉搜索树**（BST）的特性：
 
@@ -73,7 +73,7 @@ key = 3
 
 <img src="./405/1.jpg" alt="img" style="zoom: 67%;" />
 
-### 03、图解分析
+## 03、图解分析
 
 明确了概念，我们进行分析。我们要删除BST的一个节点，首先需要**找到该节点**。而找到之后，会出现三种情况。
 
@@ -97,7 +97,7 @@ key = 3
 
 分析完毕，我们一起看代码怎么实现吧。
 
-### 04、GO语言示例
+## 04、GO语言示例
 
 这里我们给出通过**后继节点**来替代自己的方案（请后面自行动手实现另一种方案）：
 
