--- a/learning/1.4.二叉树系列/406.md
+++ b/learning/1.4.二叉树系列/406.md
@@ -3,7 +3,7 @@ title:  二叉树第六讲 - 平衡二叉树(110)
 ---
 
 > 在之前的系列中，我们已经学习了**二叉树的深度**以及**DFS**，如果不会可以先查看之前的文章。今天我们将对其进行应用，直接看题目。
-### 01、题目分析
+## 01、题目分析
 
 | 第110题：平衡二叉树                            |
 | ---------------------------------------------- |
@@ -43,7 +43,7 @@ title:  二叉树第六讲 - 平衡二叉树(110)
 返回 false 。
 ```
 
-### 02、图解分析
+## 02、图解分析
 
 首先分析题目，这道题思路很简单，我们想判断一棵树是否满足平衡二叉树，无非就是判断当前结点的两个孩子是否满足平衡，同时两个孩子的高度差是否超过1。那只要我们可以得到高度，再基于高度进行判断即可。
 
@@ -61,7 +61,7 @@ title:  二叉树第六讲 - 平衡二叉树(110)
 
 <img src="./406/2.jpg" alt="img" style="zoom: 67%;" />
 
-### 03、代码分析
+## 03、代码分析
 
 根据分析，逻辑非常清晰，顺利得出代码：
 
