--- a/learning/1.0.数组系列/001.md
+++ b/learning/1.0.数组系列/001.md
@@ -2,7 +2,7 @@
 title:  两个数组的交集(350)
 ---
 
-### 01、题目分析
+## 01、题目分析
 
 我们先来看一道题目：
 
@@ -37,7 +37,7 @@ title:  两个数组的交集(350)
 
 思路：设定两个为0的指针，比较两个指针的元素是否相等。如果指针的元素相等，我们将两个指针一起向后移动，并且将相等的元素放入空白数组。
 
-### 02、题解分析
+## 02、题解分析
 
 > 首先拿到这道题，我们基本马上可以想到，此题可以看成是一道传统的**映射题（map映射）**，为什么可以这样看呢，因为**我们需找出两个数组的交集元素，同时应与两个数组中出现的次数一致。这样就导致了我们需要知道每个值出现的次数，所以映射关系就成了<元素,出现次数>**。剩下的就是顺利成章的解题。
 
@@ -66,7 +66,7 @@ func intersect(nums1 []int, nums2 []int) []int {
 
 这个方法比较简单，相信大家都能看的懂！
 
-### 03、题目进阶
+## 03、题目进阶
 
 > 题目在进阶问题中问道：如果给定的数组已经排好序呢？你将如何优化你的算法？我们分析一下，假如两个数组都是有序的，分别为：arr1 = [1,2,3,4,4,13]，arr2 = [1,2,3,9,10]
 
@@ -92,7 +92,7 @@ func intersect(nums1 []int, nums2 []int) []int {
 
 ![PNG](./001/5.png)
 
-### 04、题目解答
+## 04、题目解答
 
 根据分析，我们很容易得到下面的题解：
 
