--- a/learning/1.1.链表系列/103.md
+++ b/learning/1.1.链表系列/103.md
@@ -3,7 +3,7 @@ title:  环形链表(21)
 ---
 
 > 今天为大家带来，**链表检测成环**的经典题目。如果你觉得你会了，请你不妨耐心些认真看下去，我相信会有一些不一样的收获！还是先从一道题目开始哟，准备好了吗？ Let' s go ! 
-### 01、题目分析
+## 01、题目分析
 
 | 第141题：环形链表                                            |
 | ------------------------------------------------------------ |
@@ -43,7 +43,7 @@ title:  环形链表(21)
 >
 > **则一定会有收获！**
 
-### 02、题目分析
+## 02、题目分析
 
 **题解一：哈希表判定**
 
@@ -169,6 +169,6 @@ func hasCycle(head *ListNode) bool {
 
 所以我们的快指针的步长可以设置为 2 。
 
-### 03、特别说明
+## 03、特别说明
 
 我们常会遇到一些所谓的“简单题目“，然后用着前人留下来的那些”经典题解“迅速作答。在解题的过程中，追求公式化、模板化。当然，这个过程是好的，因为社会、工作、学业要求我们如此！但是，我希望我们也可以留下一些自己的思考，纵然不是最优解，但是是我们自己想到的、创造的！真正在算法题中去收获快乐～
