--- a/learning/1.2.动态规划系列/204.md
+++ b/learning/1.2.动态规划系列/204.md
@@ -5,7 +5,7 @@ title:  DP 第二讲 - 三角形最小路径和(120)
 > 在上一篇中，我们通过题目**“最长上升子序列” 以及 "最大子序和"，**学习了DP（动态规划）在**线性关系**中的分析方法。这种分析方法，也在运筹学中被称为“线性动态规划”，具体指的是 “目标函数为特定变量的线性函数，约束是这些变量的线性不等式或等式，目的是求目标函数的最大值或最小值”。这点大家作为了解即可，不需要死记，更不要生搬硬套！
 >
 > 在本节中，我们将继续分析一道略微区别于之前的题型，希望可以由此题与之前的题目进行对比论证，进而顺利求解！
-### 01、题目分析
+## 01、题目分析
 
 | 第120题：三角形最小路径和                                    |
 | ------------------------------------------------------------ |
@@ -28,7 +28,7 @@ title:  DP 第二讲 - 三角形最小路径和(120)
 >
 > **不建议直接看题解！**
 
-### 02、题目图解
+## 02、题目图解
 
 首先我们分析题目，要找的是**三角形最小路径和，**这是个啥意思呢？假设我们有一个三角形：[[2], [3,4], [6,5,7]，
 
@@ -105,7 +105,7 @@ title:  DP 第二讲 - 三角形最小路径和(120)
 3. 分析状态转移方程不能满足的特殊情况。
 4. 得到最终解
 
-### 03、Go语言示例
+## 03、Go语言示例
 
 根据以上分析，可以得到代码如下：
 
