--- a/learning/1.2.动态规划系列/206.md
+++ b/learning/1.2.动态规划系列/206.md
@@ -5,7 +5,7 @@ title:  DP 第六讲 - 打家劫舍(198)
 > 在前两篇中，我们分别学习了 “**三角形最小路径和**” 以及“**矩形最小路径和**” 的问题，相信已经掌握了这类题型的解题方式。我们只要**明确状态的定义**，基本上都可以顺利求解。
 >
 > 在本节中，我们将回归一道简单点的题目，目的是剖析一下**状态定义的过程**，并且举例说明如果状态定义错误，会对我们带来多大困扰！希望大家不要轻视！
-### 01、题目分析
+## 01、题目分析
 
 | 第198题：打家劫舍                                            |
 | ------------------------------------------------------------ |
@@ -37,7 +37,7 @@ title:  DP 第六讲 - 打家劫舍(198)
 >
 > **以达到最好的学习效果！**
 
-### 02、题目图解
+## 02、题目图解
 
 假设有i间房子，我们可能会定义出两种状态：
 
@@ -80,7 +80,7 @@ title:  DP 第六讲 - 打家劫舍(198)
 
 <img src="./206/3.png" alt="PNG" style="zoom: 67%;" />
 
-### 03、GO语言示例
+## 03、GO语言示例
 
 分析完毕，我们根据第二种状态定义进行求解：
 
