--- a/learning/0.0.学习须知/01.md
+++ b/learning/0.0.学习须知/01.md
@@ -2,23 +2,27 @@
 title:  小浩算法（持续更新中）
 ---
 
-::: tip 介绍
-- 小浩算法目前共完成 <font color="red"><b>105道</b></font> 高频面试算法题目，全部采用漫画图解的方式。
-- 该教程目前共有 <font color="red"><b>11w</b></font> 阅读 
-- 面向 <font color="red"><b>算法小白</b></font> 和 <font color="red"><b>初中阶读者</b></font>。
-- 所有代码均在 leetcode 上测试运行，可以直接右上角搜索题号。
+## 简介
 
-<img src="/suggest.jpeg" alt="JPEG" style="zoom: 67%;" width=300/> 
-:::
+小浩算法是我在疫情期间完成的一部图解算法题典！目前共完成 <font color="red"><b>105道</b></font> 
+高频面试算法题目，全部采用漫画图解的方式。该教程目前共有 <font color="red"><b>11w</b></font> 阅读 
+面向 <font color="red"><b>算法小白</b></font> 和 <font color="red"><b>初中阶读者</b></font>。
+所
+有代码均在 leetcode 上测试运行，可以直接右上角搜索题号。
+
 
 ::: danger 重要
-- 目前该教程<b>全部免费</b>，正因如此被一些不良商家拿去卖钱！ 所以我把全部的内容都同步到了 [github](https://github.com/geekxh/hello-algorithm)，希望大家可以帮我点一个 star，防止有更多的人上当受骗！小浩感激不尽！
+- 目前该教程<b>全部免费</b>，正因如此被一些不良商家拿去卖钱！ 所以我把全部的内容都同步到了 [github](https://github.com/geekxh/hello-algorithm
+)，<b>希望大家可以帮我点一个 star，防止有更多的人上当受骗！</b> 小浩感激不尽！
 - 为了大家更好的交流，我创建了万人刷题群。我承诺群里无广告，不套路，仅作算法交流学习使用！下方扫码回复 <font color="red"><b>【进群】</b></font> 即可
-
-<img src="/code.jpeg" alt="JPEG" style="zoom: 67%;" width=300/>
 ::: 
 
-::: tip 目录
+<img src="/code.jpeg" alt="JPEG" style="zoom: 67%;" width=300/>
+<img src="/suggest.jpeg" alt="JPEG" style="zoom: 67%;" width=300/> 
+
+## 开始学习
+
+::: tip 
 
 * [开始学习](http://www.geekxh.com) 
 
