--- a/learning/1.4.二叉树系列/407.md
+++ b/learning/1.4.二叉树系列/407.md
@@ -8,7 +8,7 @@ date: 2020-06-12
 
 > 在上一篇中，我们学习了解了**平衡二叉树**，并且利用DFS进行了验证。在本节中，我们将继续学习**完全二叉树**的相关内容。首先了解一下什么是完全二叉树。
 
-### 01、完全二叉树
+## 01、完全二叉树
 
 完全二叉树由满二叉树引出，先来了解一下什么是满二叉树：
 
@@ -40,7 +40,7 @@ date: 2020-06-12
 
 熟悉了概念，我们还是一起来看题目吧。
 
-### 02、题目分析
+## 02、题目分析
 
 | 第222题：完全二叉树的节点个数            |
 | ---------------------------------------- |
@@ -65,7 +65,7 @@ date: 2020-06-12
 输出: 6
 ```
 
-### 03、递归求解
+## 03、递归求解
 
 首先分析题目，我们很容易可以想到通过递归，来求解节点个数。
 
@@ -84,7 +84,7 @@ func countNodes(root *TreeNode) int {
 
 但是很明显，出题者肯定不是要这种答案。因为这种答案和完全二叉树一毛钱关系都没有。所以我们继续思考。
 
-### 04、经典解法
+## 04、经典解法
 
 由于题中已经告诉我们这是一颗完全二叉树，我们又已知了完全二叉树除了最后一层，其他层都是满的，并且最后一层的节点全部靠向了左边。那我们可以想到，可以将该完全二叉树可以分割成**若干满二叉树和完全二叉树**，**满二叉树直接根据层高h计算出节点为2^h-1，**然后**继续计算子树中完全二叉树节点**。那如何分割成若干满二叉树和完全二叉树呢？**对任意一个子树，遍历其左子树层高left，右子树层高right，相等左子树则是满二叉树，否则右子树是满二叉树**。这里可能不容易理解，我们看图。
 
