--- a/learning/1.4.二叉树系列/407.md
+++ b/learning/1.4.二叉树系列/407.md
@@ -1,9 +1,6 @@
 ---
-title：二叉树第七讲 - 完全二叉树(222)
----
-
-date: 2020-06-12
-
+title: 二叉树第七讲 - 完全二叉树(222)
+date: 2020-06-11
 ---
 
 > 在上一篇中，我们学习了解了**平衡二叉树**，并且利用DFS进行了验证。在本节中，我们将继续学习**完全二叉树**的相关内容。首先了解一下什么是完全二叉树。
