--- a/learning/1.4.二叉树系列/408.md
+++ b/learning/1.4.二叉树系列/408.md
@@ -1,8 +1,8 @@
 ---
-title：二叉树第八讲 - 二叉树的剪枝(814)
+title: 二叉树第八讲 - 二叉树的剪枝(814)
+date: 2020-06-11
 ---
 
-date: 2020-06-12
 
 > 在之前的系列中。我们学习了DFS、BFS，也熟悉了平衡二叉树，满二叉树，完全二叉树，BST（二叉搜索树）等概念。在本节中，我们将学习一种二叉树中常用的操作 —**剪枝**。这里额外说一点，就本人而言，对这个操作以及其衍化形式的使用会比较频繁。因为我是做规则引擎的，在规则引擎中，我们会有一个概念叫做**决策树**，那**如果一颗决策树完全生长，就会带来比较大的过拟合问题**。因为完全生长的决策树，每个节点只会包含一个样本。所以我们就**需要对决策树进行剪枝操作，来提升整个决策模型的泛化能力**（ML概念）... 听不懂也没关系，简单点讲，就是我觉得这个很重要，或者每道算法题都很重要。如果你在工作中没有用到，不是说明算法不重要，而可能是你还不够重要。
 
