--- a/learning/1.5.滑动窗口系列/502.md
+++ b/learning/1.5.滑动窗口系列/502.md
@@ -1,8 +1,9 @@
 ---
-title:滑动窗口第二讲 - 无重复字符的最长子串（3）
+title: 无重复字符的最长子串（3）
+date: 2020-06-12
 ---
 
-date: 2020-06-12
+
 
 > 在上一节中，我们使用**双端队列**完成了滑动窗口的一道颇为困难的题目，以此展示了什么是滑动窗口。在本节中我们将继续深入分析，探索滑动窗口题型一些具有模式性的解法。
 
