--- a/learning/1.5.滑动窗口系列/503.md
+++ b/learning/1.5.滑动窗口系列/503.md
@@ -1,8 +1,8 @@
 ---
-title：滑动窗口第三讲 - 找到字符串中所有字母异位词（438）
+title: 找到字符串中所有字母异位词（438）
+date: 2020-06-12
 ---
 
-date: 2020-06-12
 
 > 之前的两节讲解了**滑动窗口类**问题的**模式解法**，相信大家对该类题型已不陌生**。**今天将继续完成一道题目，来进行巩固学习。
 
