--- a/learning/1.6.博弈论系列/602.md
+++ b/learning/1.6.博弈论系列/602.md
@@ -17,9 +17,9 @@ date:	2020-06-14
 
 - 对于大胆结石而言，手术A的治愈率（73%）高于 手术B（69%）
 
-  <center><b>羊羊医院的医生得出结论： <b><center>
+  <center><b>羊羊医院的医生得出结论： </b></center>
 
-  <center>  无论是对于大小胆结石，手术A的治愈率都胜过手术B。<center>
+  <center>  无论是对于大小胆结石，手术A的治愈率都胜过手术B。</center>
 
 <br/>
 
@@ -37,9 +37,9 @@ date:	2020-06-14
 
 我们可以将其公式化（**该公式错误**），假设：
 
-><center><b>A=A1+A2+....+An <b><center>
-><center><b>B=B1+B2+....+Bn<b><center>
-><center><b>如果对i=1,2...,n都有Ai>Bi，则A>B<b><center>   
+><center><b>A=A1+A2+....+An </b></center>
+><center><b>B=B1+B2+....+Bn</b></center>
+><center><b>如果对i=1,2...,n都有Ai>Bi，则A>B</b></center>   
 
 乍一看，我们觉得该公式没有问题~所以这个公式也就代表了我们大部分人的思维工作。其实在这个公式中，隐藏掉了一个很重要的条件：**A1、A2、An 以及 B1、B2、Bn 并不能简单的通过“加”来得到 A 或者 B**。这就是**可加性**的前提。在大脑的思维过程中，因为我们很难直接看到这个前提，进而就导致了我们错误的思考！
 
