--- a/learning/0.0.学习须知/01.md
+++ b/learning/0.0.学习须知/01.md
@@ -36,13 +36,11 @@ title:  小浩算法（持续更新中）
     * [06.加一(66)](http://www.geekxh.com/1.0.数组系列/006.html)
     * [07.两数之和(1)](http://www.geekxh.com/1.0.数组系列/007.html)
 
-
 * [2.链表]()
     * [01.删除链表倒数第N个节点(19)](http://www.geekxh.com/1.1.链表系列/101.html)
     * [02.合并两个有序链表(21)](http://www.geekxh.com/1.1.链表系列/102.html)
     * [03.环形链表(21)](http://www.geekxh.com/1.1.链表系列/103.html)
     
-
 * [3.动态规划]()    
     * [01.爬楼梯(70)](http://www.geekxh.com/1.2.动态规划系列/201.html)
     * [02.最大子序和(53)](http://www.geekxh.com/1.2.动态规划系列/202.html)
@@ -51,16 +49,53 @@ title:  小浩算法（持续更新中）
     * [05.最小路径和(64)](http://www.geekxh.com/1.2.动态规划系列/205.html)
     * [06.打家劫舍(198)](http://www.geekxh.com/1.2.动态规划系列/206.html)
     
-
 * [4.字符串]()    
     * [01.反转字符串(344)](http://www.geekxh.com/1.3.字符串系列/301.html)
     * [02.字符串中的第一个唯一字符(387)](http://www.geekxh.com/1.3.字符串系列/302.html)
 
-
 * [5.二叉树]()    
     * [01.最大深度与DFS(104)](http://www.geekxh.com/1.4.二叉树系列/401.html)
     * [02.层次遍历与BFS(102)](http://www.geekxh.com/1.4.二叉树系列/402.html)
+    * [03.BST与其验证(98)](http://www.geekxh.com/1.4.二叉树系列/403.html)
+    * [04.BST 的查找(700)](http://www.geekxh.com/1.4.二叉树系列/404.html)
+    * [05.BST 的删除(450)](http://www.geekxh.com/1.4.二叉树系列/405.html)
+    * [06.平衡二叉树(110)](http://www.geekxh.com/1.4.二叉树系列/406.html)
+    * [07.完全二叉树(222)](http://www.geekxh.com/1.4.二叉树系列/407.html)
+    * [08.二叉树的剪枝(814)](http://www.geekxh.com/1.4.二叉树系列/408.html)
 
+* [6.滑动窗口]()    
+    * [01.滑动窗口最大值（239）](http://www.geekxh.com/1.5.滑动窗口系列/501.html)
+    * [01.无重复字符的最长子串（3）](http://www.geekxh.com/1.5.滑动窗口系列/502.html)
+    * [01.找到字符串中所有字母异位词（438）](http://www.geekxh.com/1.5.滑动窗口系列/503.html)
+    
+* [7.博弈论系列]()    
+    * [01.囚徒困境](http://www.geekxh.com/1.6.博弈论系列/601.html)
+    * [02.辛普森悖论](http://www.geekxh.com/1.6.博弈论系列/602.html)
+    * [03.红眼睛和蓝眼睛](http://www.geekxh.com/1.6.博弈论系列/603.html) 
+    * [04.海盗分金币](http://www.geekxh.com/1.6.博弈论系列/604.html) 
+
+* [其他补充题目]()
+    * [01.螺旋矩阵(54)](http://www.geekxh.com/1.99.其他补充题目/01.html)
+    * [02.只有两个键的键盘(650)](http://www.geekxh.com/1.99.其他补充题目/02.html)
+    * [03.24点游戏(679)](http://www.geekxh.com/1.99.其他补充题目/03.html)
+    * [04.飞机座位分配概率(1227)](http://www.geekxh.com/1.99.其他补充题目/04.html)
+    * [05.水分子的产生](http://www.geekxh.com/1.99.其他补充题目/05.html)
+    * [06.救生艇(881)](http://www.geekxh.com/1.99.其他补充题目/06.html)
+    * [07.救生艇(881)](http://www.geekxh.com/1.99.其他补充题目/07.html)
+    * [08.灯泡开关(319)](http://www.geekxh.com/1.99.其他补充题目/08.html)
+    * [09.三门问题](http://www.geekxh.com/1.99.其他补充题目/09.html)
+    * [10.猜数字游戏(299)](http://www.geekxh.com/1.99.其他补充题目/10.html)
+    * [11.LRU缓存机制(146)](http://www.geekxh.com/1.99.其他补充题目/11.html)
+    * [12.最小的k个数](http://www.geekxh.com/1.99.其他补充题目/12.html)
+    * [13.不同路径](http://www.geekxh.com/1.99.其他补充题目/13.html)
+    * [14.不同路径-障碍物](http://www.geekxh.com/1.99.其他补充题目/14.html)
+    * [15.连续n个数的和](http://www.geekxh.com/1.99.其他补充题目/15.html)
+    * [16.盛水最多的容器](http://www.geekxh.com/1.99.其他补充题目/16.html)
+    * [17.扑克牌中的顺子容器](http://www.geekxh.com/1.99.其他补充题目/17.html)
+    * [18.整数拆分(343)](http://www.geekxh.com/1.99.其他补充题目/18.html)
+    * [19.移动石子到连续(1033)](http://www.geekxh.com/1.99.其他补充题目/19.html)
+    * [20.Nim游戏(292)](http://www.geekxh.com/1.99.其他补充题目/20.html)
+    * [21.寻找两个正序数组的中位数(4)](http://www.geekxh.com/1.99.其他补充题目/21.html)
 
 * [其他：排序专栏]()
    * [排序算法](http://www.geekxh.com/2.0.排序系列/0.hello.html)
