--- a/learning/0.0.学习须知/01.md
+++ b/learning/0.0.学习须知/01.md
@@ -65,15 +65,22 @@ title:  小浩算法（持续更新中）
 
 * [6.滑动窗口]()    
     * [01.滑动窗口最大值（239）](http://www.geekxh.com/1.5.滑动窗口系列/501.html)
-    * [01.无重复字符的最长子串（3）](http://www.geekxh.com/1.5.滑动窗口系列/502.html)
-    * [01.找到字符串中所有字母异位词（438）](http://www.geekxh.com/1.5.滑动窗口系列/503.html)
+    * [02.无重复字符的最长子串（3）](http://www.geekxh.com/1.5.滑动窗口系列/502.html)
+    * [03.找到字符串中所有字母异位词（438）](http://www.geekxh.com/1.5.滑动窗口系列/503.html)
     
 * [7.博弈论系列]()    
     * [01.囚徒困境](http://www.geekxh.com/1.6.博弈论系列/601.html)
     * [02.辛普森悖论](http://www.geekxh.com/1.6.博弈论系列/602.html)
     * [03.红眼睛和蓝眼睛](http://www.geekxh.com/1.6.博弈论系列/603.html) 
-    * [04.海盗分金币](http://www.geekxh.com/1.6.博弈论系列/604.html) 
-
+    * [04.海盗分金币](http://www.geekxh.com/1.6.博弈论系列/604.html)
+    
+* [8.位运算系列]()    
+    * [01.使用位运算求和](http://www.geekxh.com/1.8.位运算系列/801.html)
+    * [02.2的幂(231)](http://www.geekxh.com/1.8.位运算系列/802.html)
+    * [03.返回一个数二进制中1的个数](http://www.geekxh.com/1.8.位运算系列/803.html) 
+    * [04.只出现一次的数字Ⅱ](http://www.geekxh.com/1.8.位运算系列/804.html) 
+    * [05.缺失数字(268)](http://www.geekxh.com/1.8.位运算系列/805.html) 
+    
 * [其他补充题目]()
     * [01.螺旋矩阵(54)](http://www.geekxh.com/1.99.其他补充题目/01.html)
     * [02.只有两个键的键盘(650)](http://www.geekxh.com/1.99.其他补充题目/02.html)
