删除多余的配置

--- a/learning/0.0.学习须知/02.md
+++ b/learning/0.0.学习须知/02.md
@@ -47,4 +47,4 @@ title:  阅读指南
 
 下方扫码，加我微信，我拉你到刷题群。和大家一起交流学习！（备注：进群）
 
-<img src="/code.jpeg" alt="PNG" style="zoom: 67%;" width=300/>
+<img src="/code.png" alt="PNG" style="zoom: 67%;" width=300/>
