--- a/learning/0.0.学习须知/01.md
+++ b/learning/0.0.学习须知/01.md
@@ -15,7 +15,7 @@ title:  小浩算法（持续更新中）
 
 ***
 为了大家更好的交流，我创建了万人刷题群。我承诺群里无广告，不套路，仅作算法交流学习使用！下方扫码回复 <font color="red"><b>【进群】</b></font> 即可
-<center><img src="/code.jpeg" alt="JPEG" style="zoom: 67%;"/></center>
+<center><img src="/code.png" alt="JPEG" style="zoom: 67%;"/></center>
 
 
 
