--- a/learning/1.8.位运算系列/806.md
+++ b/learning/1.8.位运算系列/806.md
@@ -73,7 +73,7 @@ class Solution {
     public:
     int missingNumber(vector<int>& nums) {
         int length=nums.size(); 
-        int result=(length 1)*length/2;
+        int result=(length + 1)*length/2;
         for(int e:nums) 
             result-=e;
         return result;
@@ -119,7 +119,7 @@ func missingNumber(nums []int) int {
 class Solution {
     public int missingNumber(int[] nums) {
         int res = 0;
-        for(int i = 0; i < nums.length; i  )
+        for(int i = 0; i < nums.length; i++ )
             res ^= nums[i] ^ i;
         return res ^ nums.length;
     }
@@ -136,7 +136,7 @@ class Solution {
 #python
 class Solution:
     def missingNumber(self, nums: List[int]) -> int:
-        return sum(range(len(nums) 1)) - sum(nums)
+        return sum(range(len(nums) + 1)) - sum(nums)
 ```
 
  <br/>
