--- a/learning/1.9.二分法系列/904.md
+++ b/learning/1.9.二分法系列/904.md
@@ -1,5 +1,5 @@
 ---
-title:	旋转排序数组中的最小值
+title:	旋转排序数组中的最小值Ⅰ（153）
 date:	2020-07-03
 ---
 
@@ -8,6 +8,8 @@ date:	2020-07-03
 ## 01、题目示例
 
 > 这道题目有两个版本，一道简单，一道困难。我们从简单的开始讲起。
+
+ <br/>
 
 | 第153题：旋转排序数组最小值Ⅰ                                 |
 | ------------------------------------------------------------ |
