--- a/learning/0.0.学习须知/022.md
+++ b/learning/0.0.学习须知/022.md
@@ -21,7 +21,7 @@ date:	2020-07-08
 
 对于上面这个群体（请先自行判断是否可以归为此类），**刷题的目的基本是为了面试**。不管我多么巧舌如簧，告诉你算法可以提高思维，增强逻辑，是成为top coder的必然条件，等等等等。但最终都还是会回归到这个目的：**面试**。
 
-<img src="./012/1.gif" alt="PNG" style="zoom: 50%;" />
+<img src="022/1.gif" alt="PNG" style="zoom: 50%;" />
 
 所以现在我们换掉问题：**没什么刷题经验的同学为了面试需要刷多少道题**？我的答案是：200道。
 
@@ -54,7 +54,7 @@ date:	2020-07-08
 
 如果你有上面的疑惑，那么：你错了。坚持不下来一天一道的人和刷完200道题，毛关系都没有。回到我上面的例子，200道题目里。大概easy在130-150道左右，medium在30-50道，hard只占据了不到20道题。
 
-<img src="./012/2.gif" alt="PNG" style="zoom: 67%;" />
+<img src="022/2.gif" alt="PNG" style="zoom: 67%;" />
 
 跑步和刷题不同。跑步是越来越慢，刷题却是越来越快的。对于初学者（正常人），在每一个tag刷了10道左右简单题之后，基本同类型的题目可以提高到每天2-3道easy题目，有的掌握好的，甚至能提高到每天刷5-10题。很多同类型题目，基本都是一个模子刻出来的。
 
@@ -76,7 +76,7 @@ date:	2020-07-08
 
 <br/>
 
-<img src="./012/3.jpg" alt="PNG" style="zoom: 67%;" />
+<img src="022/3.jpg" alt="PNG" style="zoom: 67%;" />
 
 <br/>
 
@@ -90,7 +90,7 @@ date:	2020-07-08
 
 能。刷题本身就是一个学习的过程。比如二叉树的题，刷个30道，你一定会遇到BST。所以我个人认为学习系统的算法知识（也就是你们问我的，要不要买一本书，先看一遍再进行刷题）和 刷题 本身并不矛盾。你可以双管齐下，也可以单点突破，都ok。主要是，干就对了。
 
-<img src="./012/4.gif" alt="PNG" style="zoom: 50%;" />
+<img src="022/4.gif" alt="PNG" style="zoom: 50%;" />
 
 到这里就会出现另一个问题，“我是从头刷，还是分类刷？” 我的建议是，如果稍微有点算法基础，你就从头刷leetcode前200道题。如果完全没有算法基础，可以考虑分tag来刷。并不是说按照tag的方式更好，而是在没有算法基础的前提下分tag来刷，除了掌握题型之外，对于知识的掌握很有益处。（想一想初高中是如何学习的）那为什么又说从头刷也是可以的？这个是因为，如果一直刷某一种类型的题，容易出现刷完一类忘掉前一类的问题，也容易对某一类题目疲惫。总之，**使用哪种方式取决于你**。关键是：干就对了！
 
