--- a/learning/0.0.学习须知/021.md
+++ b/learning/0.0.学习须知/021.md
@@ -59,7 +59,7 @@ date:	2020-07-01
 
 在重构的基础上，其实我们就可以来进行解题了。但是这里我还要对其加一个步骤，**化简**。什么又是化简，如何化简？假如我们有一个题，我们有一个二维网格，里边有N个点，两点的距离是X坐标和Y坐标的的和。比如坐标(5,1)和(4,7)的点间距就是1+6=7。我们要找到给出的N个点距离之和最小的新点的坐标。
 
-<img src="021/1.jpg" alt="PNG" style="zoom: 50%;" />
+<img src="./021/1.jpg" alt="PNG" style="zoom: 50%;" />
 
 题目因为本身是二维的，我们写代码其实不是很好写。所以我们可以将其化简为一维。我们把每一个点的左边，通过映射的方式，分别映射到 x轴 和 y轴。然后我们把问题转化成**在直线上寻找到给出点的距离之和最小的点**。这就是化简。万物之始，大道至简，至拙至美。生活中咱们也说透过现象看本质，放在算法里你就不会了？
 
