--- a/learning/1.2.动态规划系列/202.md
+++ b/learning/1.2.动态规划系列/202.md
@@ -1,5 +1,5 @@
 ---
-title:  DP 第二讲 - 最大子序和(53)
+title:  最大子序和(53)
 ---
 
 > 在上一篇文章[011.动态规划系列 —第一讲(70)](c1/011.md)中，我们讲解了DP的概念并且通过示例了解了什么是动态规划。本篇中，我们将继续通过1道简单题型，进一步学习动态规划的思想。
