--- a/learning/1.2.动态规划系列/203.md
+++ b/learning/1.2.动态规划系列/203.md
@@ -1,5 +1,5 @@
 ---
-title:  DP 第三讲 - 最长上升子序列(300)
+title:  最长上升子序列(300)
 ---
 
 > 在上一篇中，我们了解了什么是DP（动态规划），并且通过DP中的经典问题 "最大子序和"，学习了**状态转移方程**应该如何定义。在本节中，我们将沿用之前的分析方法，通过一道例题，进一步巩固之前的内容！
