--- a/learning/1.2.动态规划系列/205.md
+++ b/learning/1.2.动态规划系列/205.md
@@ -1,5 +1,5 @@
 ---
-title:  DP 第五讲 - 最小路径和(64)
+title:  最小路径和(64)
 ---
 
 > 在上一篇中，我们通过分析，顺利完成了“**三角形最小路径和**”的动态规划题解。在本节中，我们继续看一道相似题型，以求能完全掌握这种“路径和”的问题。话不多说，先看题目：
