--- a/learning/1.2.动态规划系列/206.md
+++ b/learning/1.2.动态规划系列/206.md
@@ -1,5 +1,5 @@
 ---
-title:  DP 第六讲 - 打家劫舍(198)
+title:  打家劫舍(198)
 ---
 
 > 在前两篇中，我们分别学习了 “**三角形最小路径和**” 以及“**矩形最小路径和**” 的问题，相信已经掌握了这类题型的解题方式。我们只要**明确状态的定义**，基本上都可以顺利求解。
