--- a/learning/1.4.二叉树系列/401.md
+++ b/learning/1.4.二叉树系列/401.md
@@ -1,5 +1,5 @@
 ---
-title:  二叉树第一讲 - 最大深度与DFS(104)
+title:  最大深度与DFS(104)
 ---
 
 > 在计算机科学中，二叉树是**每个结点最多有两个子树**的树结构。通常子树被称作“左子树”（left subtree）和“右子树”（right subtree）。二叉树常被用于**实现二叉查找树**和**二叉堆**。树比链表稍微复杂，因为链表是线性数据结构，而树不是。树的问题很多都可以由**广度优先搜索**或**深度优先搜索解决**。
