--- a/learning/1.4.二叉树系列/402.md
+++ b/learning/1.4.二叉树系列/402.md
@@ -1,5 +1,5 @@
 ---
-title:  二叉树第二讲 - 层次遍历与BFS(102)
+title:  层次遍历与BFS(102)
 ---
 
 > 在上一节中，我们通过例题学习了二叉树的DFS（深度优先搜索），其实就是**沿着一个方向一直向下遍历**。那我们可不可以**按照高度一层一层的访问树中的数据**呢？当然可以，就是本节中我们要讲的BFS（宽度优先搜索），同时也被称为广度优先搜索。
