--- a/learning/1.4.二叉树系列/404.md
+++ b/learning/1.4.二叉树系列/404.md
@@ -1,5 +1,5 @@
 ---
-title:  二叉树第四讲 - BST 的查找(700)
+title:  BST 的查找(700)
 ---
 
 > 在上一节中，我们学习了**二叉搜索树**。那我们如何**在二叉搜索树中查找一个元素**呢？和普通的二叉树又有何不同？我们将在本节内容中进行学习！
