--- a/learning/0.0.学习须知/03.md
+++ b/learning/0.0.学习须知/03.md
@@ -4,9 +4,9 @@ title:  资源下载
 
 [点击下载我写的电子书：1u28 （希望下方扫码支持一下，谢谢）](https://pan.baidu.com/s/1L7tO8a99B-c5xHMPrUKmqQ)
 
-扫码回复<font color="red"><b>【进群】</b></font> ，加入万人刷题群。
+扫码回复<font color="red"><b>【进群】</b></font> ，加入万人刷题群，群内可 BAT 内推。
 
-扫码回复<font color="red"><b>【999】</b></font>，下载我整理的 40 张高清思维导图
+扫码回复<font color="red"><b>【999】</b></font>，下载我整理的 40 张高清思维导图。
 
 <center><img src="/code.png" alt="JPEG" ></center>
 
