--- a/learning/1.99.其他补充题目/23.md
+++ b/learning/1.99.其他补充题目/23.md
@@ -1,198 +1,83 @@
 ---
-title:	Z字形变换（6）
-date:	2020-07-08
+title:	镜面反射（858）
+date:	2020-07-09
 ---
 
-> 今天为大家分享一道让很多人头疼过的题目 - Z字形变化。
+> 这两天熟悉的朋友该知道我情绪不太好。但总不能借着由头，便拖期延稿诉衷肠。毕竟消除恐惧的最好方法就是面对恐惧。微笑着面对它，坚持才是胜利，加油！奥利给！
 
 ## 01、题目示例
 
-> 额。。。不知道是不是我瞎，明明是N么（杠精勿扰，只是说说）
+> 王者荣耀新赛季出了个“镜”，那我也出个“镜”呗。那个不会玩，这个总该会“玩”吧？
 
-<br/>
-
-| 第6题：Z 字形变换                                            |
+| 第858题：镜面反射                                            |
 | ------------------------------------------------------------ |
-| 将一个给定字符串根据给定的行数，以从上往下、从左到右进行 Z 字形排列。比如输入字符串为 **"LEETCODEISHIRING" **行数为 3 时，排列如下： |
+| 有一个特殊的正方形房间，每面墙上都有一面镜子。除西南角以外，每个角落都放有一个接受器，编号为 0，1，以及 2。正方形房间的墙壁长度为 p，一束激光从西南角射出，首先会与东墙相遇，入射点到接收器 0 的距离为 q 。返回光线最先遇到的接收器的编号（保证光线最终会遇到一个接收器）。 |
+
+**示例：**
 
 ```
-L   C   I   R
-E T O E S I I G
-E   D   H   N
+输入： p = 2, q = 1
+输出： 2
+解释： 这条光线在第一次被反射回左边的墙时就遇到了接收器 2 。
 ```
 
-<br/>
+上面的题目绕得很，大概就是这么个意思：
 
-之后，你的输出需要从左往右逐行读取，产生出一个新的字符串，比如：**"LCIRETOESIIGEDHN"**。
-
-<br/>
-
-请你实现这个将字符串进行指定行数变换的函数：
-
-```
-string convert(string s, int numRows);
-```
-
-**示例 1:**
-
-```
-输入: s = "LEETCODEISHIRING", numRows = 3
-输出: "LCIRETOESIIGEDHN"
-```
-
-**示例 2:**
-
-```
-输入: s = "LEETCODEISHIRING", numRows = 4
-输出: "LDREOEIIECIHNTSG"
-
-解释:
-L     D     R
-E   O E   I I
-E C   I H   N
-T     S     G
-```
-
-<img src="./23/1.gif" alt="PNG" style="zoom: 67%;" />
+<img src="./23/1.jpg" alt="PNG" style="zoom: 80%;" />
 
 ## 02、题目分析
 
-> 这是我比较推崇的一道“小学题目”，因为其没有任何复杂的思维逻辑，只需要按部就班，就可以顺利解答。难的是，按部就班的过程里，却极其容易出错。
+> 这是一道数学题...不喜勿喷
 
 <br/>
 
-因为最终目的是变换字符串的顺序，并且题中也没有限制说不可用额外空间，所以我们秉承不重复造轮子的原则，想办法利用某种结构对原字符串做文章。
-
-<br/>
-
-假若我们采用示例2的数据来进行分析，输入字符串 s 为  "LEETCODEISHIRING"， numRows 为 4 ，画成图大概长这样：
+我们知道光是由西南角发出的，也就是左下角。发出之后可能会出现多种情况（注意，下图略过了部分光线反射的情况）。看起来是十分复杂，无迹可寻。
 
 <img src="./23/2.jpg" alt="PNG" style="zoom: 50%;" />
 
-重点来了，**我们的目标是按行打印，那总得有个东西来存储每行的数据吧**？因为只需要存储**每行**的数据，那是不是用个数组就可以了。（当然，你硬说搞个map来存也没啥毛病，就是有点闲得蛋疼）
-
-<br/>
-
-问题来了，那数组设置多大呢？自然是有多少行我们就设置多大呗，换句话说，numRows多大，我们的数组就设置多大。画成图大概就是下面这个样子：
+但是如果我们把光线的运动轨迹拆开来看，就可以观测到，**光线每经过一次折反，都会在纵向距离上移动 q**（首次与东墙相距的距离）。同时，**一旦其向上行走的距离为 p 的整数倍，就一定会碰到某个接收点（**注意：这里我们不需要考虑北面墙是否存在，根据光的反射定律可得**）**可以参考一下下面这张图：
 
 <img src="./23/3.jpg" alt="PNG" style="zoom: 50%;" />
 
-存储的容器有了，原字符串也列出来是啥样了，现在嘎哈？自然就是把原字符串放到容器里咯。怎么放？**根据 numRows 的大小来回进行放置即可**（即从0到n-1，再从n-1到0）。具体的请看下图：
+问题变得简单了，**光线最终向上走的距离，其实就是 p 和 q 的最小公倍数**。我们设最小公倍数为 L，会发现如果 L 是 p 的**奇数倍**，光线则到达**北墙**（可以参考上面的图）当 L 是 p 的 **偶数倍**，光线将会射到**南墙**。
 
-<img src="./23/4.jpg" alt="PNG" style="zoom: 67%;" />
+<br/>
 
-上面的图长得不得了，但是观察我们能看出来，**每 2n-2 即为一个周期**。到了这里，应该没有人会质疑这是一道小学题目了吧。。。把所有的字符串放完之后，大概就是下面这个样子：
+问题来了，如果光线是射向南墙，因为只有一个接收器了，必定只能遇到接收器 0。但是如果射到了北墙，如何区分是 1 和 2。这回到了一个初中数学题，我们可以通过**光线与东西墙的接触次数，来判断最终的落点是 1 还是 2。**
 
-<img src="./23/5.jpg" alt="PNG" style="zoom: 67%;" />
+<br/>
 
-最后一步，咱们让这个数组排排坐，就可以开始吃果果：
+根据分析，得出代码（这道题应该不需要给多语言版本吧，都长一样....）：
 
-<img src="./23/6.jpg" alt="PNG" style="zoom: 67%;" />
-
-如果看不清楚，不如这样：
-
-<img src="./23/7.jpg" alt="PNG" style="zoom: 67%;" />
-
-根据分析，得出代码（好久没翻go的牌子了）：
-
-```go
-//go
-func convert(s string, numRows int) string {
-    if numRows == 1{
-		return s
-	}
-	var b = []rune(s)
-	var res = make([]string, numRows)
-	var length = len(b)
-	var period = numRows * 2 - 2
-	for i := 0 ;i < length; i ++ {
-		var mod = i % period
-		if mod < numRows {
-			res[mod] += string(b[i])
-		} else {
-			res[period - mod] += string(b[i])
-		}
-	}
-	return strings.Join(res, "")
+```java
+//JAVA
+class Solution {    
+    public int mirrorReflection(int p, int q) {        
+        int m = p, n = q;        
+        int r;        
+        while (n > 0) {            
+            r = m % n;            
+            m = n;            
+            n = r;        
+        }        
+        if ((p / m) % 2 == 0) {            
+            return 2;        
+        } else if ((q / m) % 2 == 0) {
+            return 0;        
+        } else {            
+            return 1;       
+        }   
+    }
 }
 ```
 
 执行结果：
 
-<img src="./23/8.jpg" alt="PNG"  />
+<img src="./23/4.jpg" alt="PNG" style="zoom: 80%;" />
 
-上面的代码要强调两点：
-
-<br/>
-
-第一：用了一个rune，这个其实是go里的用法，用来处理unicode或utf-8字符而已，并没有什么特别的。
-
-第二：12-15行的意思是，在周期内，正着走 numRows-1 下，剩余的反着走。（也就是上面那个长长的图）
-
-<br/>
-
-为了照顾Java的小伙伴，再给出一个Java版本的：
-
-```java
-//java
-class Solution {
-    public static String convert(String s, int numRows) {
-        if (numRows == 1) return s;
-        String[] arr = new String[numRows];
-        Arrays.fill(arr, "");
-        char[] chars = s.toCharArray();
-        int len = chars.length;
-        int period = numRows * 2 - 2;
-        for (int i = 0; i < len; i++) {
-            int mod = i % period;
-            if (mod < numRows) {
-                arr[mod] += chars[i];
-            } else {
-                arr[period - mod] += String.valueOf(chars[i]);
-            }
-        }
-        StringBuilder res = new StringBuilder();
-        for (String ch : arr) {
-            res.append(ch);
-        }
-        return res.toString();
-    }
-}
-```
-
-和Go语言的示例一样，代码的关键仍然是计算轨迹的过程（10-17），这里再提供另外一种计算轨迹的方式：
-
-```java
-//java
-class Solution {
-    public String convert(String s, int numRows) {
-        if (numRows == 1) return s;
-        String[] arr = new String[numRows];
-        Arrays.fill(arr, "");
-        int i = 0, flag = -1;
-        for (char c : s.toCharArray()) {
-            arr[i] += c;
-            if (i == 0 || i == numRows - 1) flag = -flag;
-            i += flag;
-        }
-        StringBuilder res = new StringBuilder();
-        for (String ch : arr) {
-            res.append(ch);
-        }
-        return res.toString();
-    }
-}
-```
-
-通过使用一个标志位，来使轨迹回移。（本质其实是一样的）
-
-<br/>
-
-## 03、总结
-
-> 这道题目的意义在于考察coding的能力，本身的思维过程并不复杂。有的同学一看这种题目，**就想通过二维数组来进行计算，殊不知已经落入了题目的陷阱（不信你试试，二维数组出错率一定远胜一维数组）**。当然，本题也是可以不借助额外空间来进行实现的，核心的逻辑完全相同，建议大家下去自己动手练习一下。
+这道题学会了吗？如果不会就不要玩镜了吧（皮一个）。
 
  <br/>
 
-所以，今天的问题你学会了吗，评论区留下你的想法！
+快来评论区留下你的想法吧！
 
