--- a/learning/1.99.其他补充题目/28.md
+++ b/learning/1.99.其他补充题目/28.md
@@ -1,5 +1,5 @@
 ---
-1title:	有效的数独
+title:	有效的数独
 date:	2020-07-10
 ---
 
@@ -126,7 +126,6 @@ int[][] sbox = new int[9][9];
 <br/>
 
 ><center>rows[当前行][当前元素值] = rows[5][2] = 1</center>
->
 ><center>col[当前列][当前元素值] = col[4][2] = 1</center>
 
 <br/>
@@ -136,7 +135,6 @@ int[][] sbox = new int[9][9];
 
 
 ><center>rows[当前行][当前元素值] = rows[5][2-1] = 1</center>
->
 ><center>col[当前列][当前元素值] = col[4][2-1] = 1</center>
 
 <br/>
