--- a/learning/1.41.回溯系列/1.md
+++ b/learning/1.41.回溯系列/1.md
@@ -71,7 +71,7 @@ date:	2020-07-11
 
 当然，如果不省略其回溯过程，就是下面这个样子：
 
-<video src="./1.mp4" width="800px" height="600px" controls="controls"></video>
+[TODO]
 
 上面分析是分析完了，但是仍然不妨碍你继续懵逼。。。“题目中不是给我的是一个数组吗？作为一个合格的算法小白，我特么根本就不知道 DFS 在这里面咋用啊！！”本来想扔完代码就走，想了想还是决定讲一下。
 
