--- a/website/1.9.二分法系列/905.md
+++ b/website/1.9.二分法系列/905.md
@@ -3,7 +3,7 @@ title:	旋转排序数组中的最小值Ⅱ(154)
 date:	2020-07-03
 ---
 
-今天继续为大家讲解二分法系列篇 - 旋转排序数组最小值Ⅱ（进阶版）。话不多说，直接看题：
+> 今天继续为大家讲解二分法系列篇 - 旋转排序数组最小值Ⅱ（进阶版）。话不多说，直接看题：
 
 ## 01、题目示例
 
@@ -27,6 +27,8 @@ date:	2020-07-03
 输出: 0
 ```
 
+ <br/>
+
 **说明：**
 
 - 这道题是 [旋转排序数组中的最小值(153)](1.9/904.md) 的延伸题目。
@@ -44,10 +46,24 @@ date:	2020-07-03
 
 [旋转排序数组中的最小值(153)](1.9/904.md) 
 
+ <br/>
+
 并且我这里对昨天的题目，补上一个和left对比的版本，供大家参考学习（昨天没有给Go的示例，所以今天补一个Go的）
 
 ```go
-
+//go 
+func findMin(nums []int) int { 
+    left, right := 0, len(nums)-1 
+    for left < right { 
+        mid := left + (right-left)>>1 + 1 
+        if nums[left] < nums[mid] { 
+            left = mid 
+        } else if nums[left] > nums[mid] {
+            right = mid - 1
+        }
+    }
+    return nums[(right+1)%len(nums)]
+}
 ```
 
 上面的代码有两处需要说明，第一：mid中最后加1的目的，是为了使得mid更加靠近right，增加容错性。当然，你写到里边也是可以的，甚至更好。我怕大家看不懂，所以写在外面了。第二：最后一行代码取模，是需要考虑最大值刚好在最右边的情况。
@@ -67,11 +83,9 @@ date:	2020-07-03
 <img src="./905/3.jpg" alt="PNG" style="zoom: 67%;" />
 
 <center>（无重复） </b></center>
-
 <img src="./905/4.jpg" alt="PNG" style="zoom: 67%;" />
 
 <center>（有重复） </b></center>
-
 其实直接就可以给出代码了：
 
 ```java
@@ -101,7 +115,6 @@ class Solution {
 <img src="./905/5.jpg" alt="PNG" style="zoom: 80%;" />
 
 <center>（左边是有重复，右边是无重复） </b></center>
-
 可以看到在 nums[mid] 等于 nums[right] 时的情况下，我们只多了一个 right-1 的操作。这里需要额外说明的是，为什么要这样做？我看leetcode上的题解，这块很多都是长篇大论，其实没那么复杂，一句话就可以给你讲明白，看看下面这个！
 
 <img src="./905/6.jpg" alt="PNG" style="zoom: 67%;" />
@@ -111,3 +124,4 @@ class Solution {
  <br/>
 
 所以，今天的问题你学会了吗，评论区留下你的想法！
+
