--- a/website/0.01.指导学习/021.md
+++ b/website/0.01.指导学习/021.md
@@ -3,7 +3,7 @@ title: 指导学习（一）
 date:	2020-07-01
 ---
 
-> 我们暂停一天，我自己有个很喜欢的话，叫做 “练习 - 坚持 - 总结 - 提高”，我们已经练习了 70 天，如果不进行一些问题的总结，永远只低头看路，恐怕就会迷路。所以今儿咱们不讲算法题，而是讲一讲到底如何“解决问题”，本文**非常非常非常重要**，是我很长一段时间的心血与积累，大家一定要耐心看完，共包含3节：
+>  我自己有个很喜欢的话，叫做 “练习 - 坚持 - 总结 - 提高”，我们已经练习了 70 天，如果不进行一些问题的总结，永远只低头看路，恐怕就会迷路。所以今儿咱们不讲算法题，而是讲一讲到底如何“解决问题”，本文**非常非常非常重要**，是我很长一段时间的心血与积累，大家一定要耐心看完，共包含3节：
 >
 > - 算法对个人的意义
 > - 解决问题的策略
